working implementation of social_behavior

--- a/argos/src/examples/behaviors/CMakeLists.txt
+++ b/argos/src/examples/behaviors/CMakeLists.txt
@@ -79,20 +79,26 @@ if(ARGOS_BUILD_FOR_SIMULATOR)
   #
   # ARK loop function: demoC
   #
-  add_executable(forager forager.c)  
+  add_executable(forager forager.c)
   target_link_libraries(forager argos3plugin_simulator_kilolib)
 
 
   #
   # ARK loop function: gradientFollowing
   #
-  add_executable(gradient_follower gradient_follower.c)  
+  add_executable(gradient_follower gradient_follower.c)
   target_link_libraries(gradient_follower argos3plugin_simulator_kilolib)
+
+  #
+  # social_behavior
+  #
+  add_executable(social_behavior social_behavior.c)
+  target_link_libraries(social_behavior argos3plugin_simulator_kilolib)
 
   #
   # ARK loop function: clustering
   #
-  add_executable(clustering clustering.c)  
+  add_executable(clustering clustering.c)
   target_link_libraries(clustering argos3plugin_simulator_kilolib)
 
   #
