The swarm now comprises two different behaviours with sequential IDs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "bit": "cpp",
+        "variant": "cpp"
     },
     "cmake.configureOnOpen": true,
     "cmake.sourceDirectory": "${workspaceFolder}/argos/src"
